--- a/package.json
+++ b/package.json
@@ -19,7 +19,9 @@
   "author": "The Wit Team <help@wit.ai>",
   "dependencies": {
     "isomorphic-fetch": "^2.2.1",
-    "node-uuid": "^1.4.7"
+    "lodash": "^4.15.0",
+    "node-uuid": "^1.4.7",
+    "q": "^1.4.1"
   },
   "engines": {
     "node": ">=4.0.0"
