--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   "repository": "https://github.com/wit-ai/node-wit",
   "author": "The Wit Team <help@wit.ai>",
   "dependencies": {
+    "fs": "0.0.1-security",
     "isomorphic-fetch": "^2.2.1",
     "lodash": "^4.15.0",
     "node-uuid": "^1.4.7",
